--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
 	<string name="app_name">ARGallery</string>
+
+	<!-- Picture list erro -->
+	<string name="error_title">Connection Error</string>
+	<string name="error_description">Please ensure you are connected to the internet and try again.</string>
+	<string name="error_try_again">Try again</string>
+
+	<!-- Fitler fragment -->
+	<string name="filter_title">Filter</string>
+	<string name="filter_reset">RESET</string>
 </resources>
