Main screen improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,17 @@
 	<string name="error_description">Please ensure you are connected to the internet and try again.</string>
 	<string name="error_try_again">Try again</string>
 
-	<!-- Fitler fragment -->
+	<!-- Filter fragment -->
 	<string name="filter_title">Filter</string>
 	<string name="filter_reset">RESET</string>
+
+	<!-- Favourites empty screen -->
+	<string name="favourites_empty_screen_title">No data</string>
+	<string name="favourites_empty_screen_description">You have no favourite pictures</string>
+	<string name="favourites_empty_screen_show_all">Show all</string>
+
+	<!-- Filtered empty screen -->
+	<string name="filtered_empty_screen_title">No data</string>
+	<string name="filtered_empty_screen_description">Nothing is found with current filter</string>
+	<string name="filtered_empty_screen_show_all">Change filter</string>
 </resources>
